Stage 4/5: Menu, please_

--- a/Cinema Room Manager/Menu, please_/task-info.yaml
+++ b/Cinema Room Manager/Menu, please_/task-info.yaml
@@ -352,5 +352,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/133/stages/712/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Mon, 26 Sep 2022 16:48:54 UTC
 record: -1
